fixed router from hash to html5 and too small size of links in footer, now both are translated and bigger.

--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,6 @@ body {
 
 .font-text-link-footer {
     font-family: 'Courgette', cursive;
-    font-size: x-small !important;
     color: white;
     border-bottom: 1px solid transparent;
 }
